kv text styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               symbiose
             </h2>
             <p class="es-kv__text">
-              do przetłuszczającej się i wrażliwej skóry głowy <br>
+              do przetłuszczającej się<br>i wrażliwej skóry głowy <br>
               <strong>ze skłonnością do łupieżu</strong>
             </p>
           </div>
